# striker

./: .gitignore  README.md  hello.py  pyproject.toml
src/striker/: __init__.py  _backend.py
src/striker/engine/: _entity.py  _scene.py  _solver.py  entity.py  scene.py  solver.py
src/striker/visualizer/: __init__.py
